syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.myapp.helloworld.grpc";
option java_outer_classname = "GrpcEchoProto";

package helloworld;

////////////////////////////////////// The greeting service definition.
service GreeterService {
  //////////////////////
  // Sends a greeting //
  ////////*****/////////
  //      HELLO       //
  ////////*****/////////
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Comment spanning
  // on several lines
  rpc ItKeepsTalking (stream HelloRequest) returns (HelloReply) {}

  /*
   * C style comments
   */
  rpc ItKeepsReplying (HelloRequest) returns (stream HelloReply) {}

  /* C style comments
   * on several lines
   * with non-empty heading/trailing line */
  rpc StreamHellos (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name (= payload) and client_id (= metadata)
message HelloRequest {
  string name = 1;
  //uint32 client_id = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}